Fix track classname overlap bug

--- a/client/src/sass/components/track.scss
+++ b/client/src/sass/components/track.scss
@@ -1,4 +1,4 @@
-.track {
+.track-page {
   display: flex;
   flex-direction: column;
   width: 100%;
